--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,11 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
 
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-moshi:2.6.2"
-    implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
 
     implementation "com.github.bumptech.glide:glide:4.12.0"
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
